force-app/main/default/objects/Computer__c/Computer__c.object-meta.xml
<CustomObject>
    <label>Computer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>