force-app/main/default/objects/Computer__c/fields/Company2__c.field-meta.xml
<CustomField>
    <fullName>Company2__c</fullName>
    <label>Company2</label>
    <referenceTo>Company2__c</referenceTo>
    <relationshipLabel>Computers</relationshipLabel>
    <relationshipName>Computers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>