force-app/main/default/objects/Computer__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DotNet</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Java Script</fullName>
            </value>
            <value>
                <fullName>Angular JS</fullName>
            </value>
            <value>
                <fullName>React JS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>