force-app/main/default/objects/Computer__c/listViews/Test_List_View.listView-meta.xml
<ListView>
    <fullName>Test_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>1</value>
    </filters>
    <label>Test List View</label>
    <sharedTo>
        <group>GSM_Managers_group</group>
    </sharedTo>
</ListView>